# desktop-audio-capture

./: .clang-format  .gitignore  .gitmodules  .swift-format  CMakeLists.txt  LICENSE  README.md  index.cjs  index.d.ts  index.js  index.mjs  install.js  package-lock.json  package.json
include/capture/: capture.h  module.modulemap
lib/capture/: AudioCapture.swift  Bridge.swift  CMakeLists.txt  CaptureTargetConverter.swift  ContentFilterFactory.swift  MediaCapture.swift  MediaCaptureBridge.swift  MockMediaCapture.swift  ScreenCapture.swift  SharedCaptureTarget.swift
lib/capture/src/macos/: AudioCapture.swift  Bridge.swift  CMakeLists.txt
lib/capture/src/windows/: AudioCapture.cc  CMakeLists.txt
lib/capture_win/: AudioCapture.cc  CMakeLists.txt  MediaCaptureWin.cc  MediaCaptureWin.h  audiocaptureimpl.cc  audiocaptureimpl.h  captureclient.cc  captureclient.h  mediacaptureclient.cc  mediacaptureclient.h  videocaptureimpl.cc  videocaptureimpl.h
scripts/: install.js  install.mjs  postpack.js  prepack.js
src/: CMakeLists.txt  addon.cc  audiocapture.cc  audiocapture.h  mediacapture.cc  mediacapture.h
tests/mac/MediaCaptureTest/: MediaCaptureTest.xctestplan
tests/mac/MediaCaptureTest/MediaCaptureTest/: AudioVisualizationComponents.swift  CaptureTimelineView.swift  ContentView.swift  FramePreviewView.swift  FramePreviewViewModel.swift  FrameRateTestView.swift  FrameRateTestViewModel.swift  MediaCaptureTestApp.swift  MediaCaptureViewModel.swift  PerformanceTestViewModel.swift  RawDataManager.swift
tests/mac/MediaCaptureTest/MediaCaptureTest.xcodeproj/: project.pbxproj
tests/mac/MediaCaptureTest/MediaCaptureTest.xcodeproj/project.xcworkspace/xcuserdata/hayashi.xcuserdatad/: UserInterfaceState.xcuserstate
tests/mac/MediaCaptureTest/MediaCaptureTest.xcodeproj/xcshareddata/xcschemes/: MediaCaptureTest.xcscheme
tests/mac/MediaCaptureTest/MediaCaptureTestTests/: Info.plist  MediaCaptureFrameRateTests.swift  MediaCaptureTestTests.swift  MediaCaptureTests.swift  MockMediaCapture.swift
tests/mac/ScreenCaptureSample/: README.md  ScreenCaptureSampleTest.xctestplan
tests/mac/ScreenCaptureSample/ScreenCaptureSample/: ContentView.swift  Info.plist  ScreenCaptureSampleApp.swift
tests/mac/ScreenCaptureSample/ScreenCaptureSample.xcodeproj/: project.pbxproj
tests/mac/ScreenCaptureSample/ScreenCaptureSample.xcodeproj/project.xcworkspace/xcuserdata/hayashi.xcuserdatad/: UserInterfaceState.xcuserstate
tests/mac/ScreenCaptureSample/ScreenCaptureSample.xcodeproj/xcshareddata/xcschemes/: ScreenCaptureSample.xcscheme
tests/mac/ScreenCaptureSample/ScreenCaptureSampleTests/: AudioCaptureTests.swift  MockScreenCapture.swift  ScreenCaptureSampleTests.swift
tests/mac/screen_capture_single_test/: ContentView.swift  Info.plist
tests/node/: record-test.mjs  test-audiocapture.mjs  test-mediacapture.mjs
tests/sample/: audio-sample.mjs  cjs-test.cjs  esm-test.mjs  media-sample.mjs  package-lock.json  package.json  simple-media-sample.mjs
