add_library(addon SHARED)
set_target_properties(addon PROPERTIES PREFIX "" SUFFIX ".node")
set_target_properties(addon PROPERTIES LINKER_LANGUAGE CXX)
target_sources(addon PRIVATE addon.cc audiocapture.h audiocapture.cc ${CMAKE_JS_SRC})
target_include_directories(addon PRIVATE ${CMAKE_JS_INC})
target_link_libraries(addon PRIVATE ${CMAKE_JS_LIB})
target_link_libraries(addon PRIVATE capture)
target_compile_definitions(addon PRIVATE NODE_API_NO_EXTERNAL_BUFFERS_ALLOWED)

if(APPLE)
  target_link_libraries(addon PUBLIC "-framework ScreenCaptureKit" "-framework AVFoundation" "-framework Foundation")
endif()
